--- a/src/components/BarkMeter.css
+++ b/src/components/BarkMeter.css
@@ -1,6 +1,5 @@
 .meter-wrapper {
     width: 100%;
-    border: 1px solid black;
   }
 
 .meter {
@@ -8,5 +7,25 @@
     height: 10px;
     display: inline-block;
     margin: 5px;
-    border: 1px solid blue;
+    border-bottom: 1px solid black;
+    border-left: 1px solid black;
+  }
+
+  .icons {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+  }
+
+  .listen {
+      display: flex;
+      justify-content: space-around;
+      margin-top: 50%;
+      height: 10rem;
+  }
+
+  .listen button {
+      width: 90%;
+      font-size: 2rem;
+      color: white;
   }
