--- a/src/components/BarkMeter.css
+++ b/src/components/BarkMeter.css
@@ -22,10 +22,12 @@
       justify-content: space-around;
       margin-top: 50%;
       height: 10rem;
+      width: 100%;
   }
 
   .listen button {
-      width: 90%;
+      width: 200%;
       font-size: 2rem;
       color: white;
+      border: 1px solid red;
   }
